comparison before css

--- a/src/pages/Comparison/comparison.scss
+++ b/src/pages/Comparison/comparison.scss
@@ -5,7 +5,6 @@
   align-items: center;
   justify-content: space-around;
 }
-
 @media (max-width: 767px) {
   .compare__container {
     margin-top: 2rem;
@@ -13,4 +12,4 @@
     flex-direction: column;
     height: 100%;
   }
-}/*# sourceMappingURL=comparison.css.map */
+}
