--- a/src/components/PlayerCard/playercard.scss
+++ b/src/components/PlayerCard/playercard.scss
@@ -11,7 +11,7 @@ $color: #d41111;
   border-radius: 2rem;
   width: 16rem;
   height: 25rem;
-  box-shadow: 4px 0px 12px #001921;
+  // box-shadow: 4px 0px 12px #001921;
   .img__container {
     display: flex;
     flex-direction: column;
