--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #e9e9ebc5;
+  height: 100vh;
+  width: 100%;
 }
 .App {
   text-align: center;
