--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,12 +1,12 @@
 .navbar__container {
   width: 100%;
-  height: 3.5rem;
+  height: 8vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 2rem;
   border-bottom: 1px solid black;
-  background-color: rgba(255, 255, 255, 0.698);
+  background-color: rgba(150, 172, 185, 0.061);
   .rigthIcons {
     display: flex;
     gap: 2rem;
@@ -14,10 +14,19 @@
       width: 3rem;
       height: 3rem;
     }
+    .report {
+      position: relative;
+    }
+    .counter {
+      position: absolute;
+      right: 0rem;
+      bottom: 0px;
+      color: red;
+    }
   }
   img {
-    width: 7rem;
-    height: 7rem;
+    width: 10rem;
+    height: 9rem;
   }
 }
 @media (max-width: 767px) {
