--- a/src/pages/ScoutReports/scoutreports.css
+++ b/src/pages/ScoutReports/scoutreports.css
@@ -1,11 +1,14 @@
 .reports__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  border: 1px solid black;
+  height: 90vh;
   width: 100%;
-  height: 100vh;
-  flex-wrap: wrap;
-  background-color: pink;
+  display: flex;
+  justify-content: space-around;
+  padding: 2rem 10rem;
+}
+.reports__container .displaycard {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  padding-top: 2rem;
+  gap: 2rem;
 }/*# sourceMappingURL=scoutreports.css.map */
