--- a/src/pages/ScoutReports/scoutreports.scss
+++ b/src/pages/ScoutReports/scoutreports.scss
@@ -1,13 +1,15 @@
-$color: #d41111;
-
 .reports__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  border: 1px solid black;
+  height: 90vh;
   width: 100%;
-  height: 100vh;
-  flex-wrap: wrap;
-  background-color: pink;
+  display: flex;
+  justify-content: space-around;
+  padding: 2rem 10rem;
+
+  .displaycard {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    padding-top: 2rem;
+    gap: 2rem;
+  }
 }
