--- a/src/components/ReportCard/reportcard.css
+++ b/src/components/ReportCard/reportcard.css
@@ -1,5 +1,5 @@
 .report__container {
-  background-color: #f0f0f0;
+  background-color: #eeeff0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
