--- a/src/components/PlayerCard/playercard.css
+++ b/src/components/PlayerCard/playercard.css
@@ -20,8 +20,8 @@
 .card__container .img__container h4 {
   position: absolute;
   top: 2px;
-  text-shadow: 5px 5px 25px black;
-  color: #fff;
+  text-shadow: 2.5px 1.5px 3px white;
+  color: #000000;
   padding: 0.7rem;
 }
 .card__container .img__container .position {
