--- a/src/components/PlayerCard/playercard.scss
+++ b/src/components/PlayerCard/playercard.scss
@@ -21,8 +21,8 @@ $color: #d41111;
     h4 {
       position: absolute;
       top: 2px;
-      text-shadow: 5px 5px 25px black;
-      color: #fff;
+      text-shadow: 2.5px 1.5px 3px rgb(255, 255, 255);
+      color: #000000;
       padding: 0.7rem;
     }
     .position {
