--- a/src/pages/Comparison/comparison.css
+++ b/src/pages/Comparison/comparison.css
@@ -2,8 +2,27 @@
   width: 100%;
   height: 90vh;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+}
+.compare__container .cardandgraph {
+  display: flex;
   align-items: center;
   justify-content: space-around;
+  flex-direction: column;
+  background: #c7c7c7;
+  border-radius: 2rem;
+  width: 98%;
+  height: 60vh;
+}
+.compare__container .cards__container {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 12rem;
+  flex-direction: row;
 }
 
 @media (max-width: 767px) {
