--- a/src/pages/Comparison/comparison.scss
+++ b/src/pages/Comparison/comparison.scss
@@ -2,8 +2,27 @@
   width: 100%;
   height: 90vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 1.5rem;
+  .cardandgraph {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    background: rgb(199, 199, 199);
+    border-radius: 2rem;
+    width: 98%;
+    height: 60vh;
+  }
+  .cards__container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 12rem;
+    flex-direction: row;
+  }
 }
 @media (max-width: 767px) {
   .compare__container {
