--- a/src/components/ComparisonCard/comparisoncard.css
+++ b/src/components/ComparisonCard/comparisoncard.css
@@ -17,7 +17,16 @@
   align-items: center;
 }
 .ComparisonCardContainer .valueAndSalary {
-  background-color: rgba(109, 104, 104, 0.589);
   border-radius: 0.3rem;
   padding: 0.5rem 1.3rem;
+}
+
+@media (max-width: 767px) {
+  .ComparisonCardContainer {
+    width: 25rem;
+    gap: 2rem;
+    height: 10rem;
+    justify-content: space-between;
+    padding: 0 0.5rem;
+  }
 }/*# sourceMappingURL=comparisoncard.css.map */
