--- a/src/components/ComparisonCard/comparisoncard.scss
+++ b/src/components/ComparisonCard/comparisoncard.scss
@@ -16,8 +16,18 @@
     align-items: center;
   }
   .valueAndSalary {
-    background-color: rgba(109, 104, 104, 0.589);
     border-radius: 0.3rem;
     padding: 0.5rem 1.3rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .ComparisonCardContainer {
+    width: 25rem;
+    gap: 2rem;
+    height: 10rem;
+
+    justify-content: space-between;
+    padding: 0 0.5rem;
   }
 }
