--- a/src/components/Graph/graph.css
+++ b/src/components/Graph/graph.css
@@ -1,44 +1,538 @@
-.skillscontainer {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  width: 100%;
-  padding: 1rem;
-}
-.skillscontainer .skillcontainer {
-  width: 30rem;
+.text {
+  font-weight: 600;
   display: flex;
-  justify-content: space-between;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  padding: 0.2rem;
-}
-.skillscontainer .skillcontainer .line {
-  display: flex;
-  gap: 0.5rem;
-  position: relative;
-}
-.skillscontainer .skillcontainer .percentage {
-  font-size: 0.8em;
-  width: 13rem;
-  height: 1.5rem;
-  background: repeating-linear-gradient(to right, black, black 1px, #fff 1px);
-}
-.skillscontainer .skillcontainer .bar {
+  align-items: center;
+  height: 40px;
+  width: 130px;
+  background-color: white;
   position: absolute;
-  right: 1.5rem;
+  left: 0;
+  justify-content: flex-end;
+}
+
+.percentage {
+  font-size: 0.8em;
+  line-height: 1;
+  text-transform: uppercase;
+  width: 85%;
+  height: 40px;
+  margin-left: 130px;
+  background: repeating-linear-gradient(to right, #ddd, #ddd 1px, #fff 1px);
+}
+.percentage:after {
+  content: "";
+  display: block;
+  background-color: #3d9970;
+  width: 50px;
+  margin-bottom: 10px;
+  height: 90%;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%);
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+.percentage:hover:after, .percentage:focus:after {
+  background-color: #aaa;
+}
+
+.percentage-1:after {
+  width: 1%;
+  left: 49%;
+}
+
+.percentage-2:after {
+  width: 2%;
+  left: 48%;
+}
+
+.percentage-3:after {
+  width: 3%;
+  left: 47%;
+}
+
+.percentage-4:after {
+  width: 4%;
+  left: 46%;
+}
+
+.percentage-5:after {
+  width: 5%;
+  left: 45%;
+}
+
+.percentage-6:after {
+  width: 6%;
+  left: 44%;
+}
+
+.percentage-7:after {
+  width: 7%;
+  left: 43%;
+}
+
+.percentage-8:after {
+  width: 8%;
+  left: 42%;
+}
+
+.percentage-9:after {
+  width: 9%;
+  left: 41%;
+}
+
+.percentage-10:after {
+  width: 10%;
+  left: 40%;
+}
+
+.percentage-11:after {
+  width: 11%;
+  left: 39%;
+}
+
+.percentage-12:after {
+  width: 12%;
+  left: 38%;
+}
+
+.percentage-13:after {
+  width: 13%;
+  left: 37%;
+}
+
+.percentage-14:after {
+  width: 14%;
+  left: 36%;
+}
+
+.percentage-15:after {
+  width: 15%;
+  left: 35%;
+}
+
+.percentage-16:after {
+  width: 16%;
+  left: 34%;
+}
+
+.percentage-17:after {
+  width: 17%;
+  left: 33%;
+}
+
+.percentage-18:after {
+  width: 18%;
+  left: 32%;
+}
+
+.percentage-19:after {
+  width: 19%;
+  left: 31%;
+}
+
+.percentage-20:after {
+  width: 20%;
+  left: 30%;
+}
+
+.percentage-21:after {
+  width: 21%;
+  left: 29%;
+}
+
+.percentage-22:after {
+  width: 22%;
+  left: 28%;
+}
+
+.percentage-23:after {
+  width: 23%;
+  left: 27%;
+}
+
+.percentage-24:after {
+  width: 24%;
+  left: 26%;
+}
+
+.percentage-25:after {
+  width: 25%;
+  left: 25%;
+}
+
+.percentage-26:after {
+  width: 26%;
+  left: 24%;
+}
+
+.percentage-27:after {
+  width: 27%;
+  left: 23%;
+}
+
+.percentage-28:after {
+  width: 28%;
+  left: 22%;
+}
+
+.percentage-29:after {
+  width: 29%;
+  left: 21%;
+}
+
+.percentage-30:after {
+  width: 30%;
+  left: 20%;
+}
+
+.percentage-31:after {
+  width: 31%;
+  left: 19%;
+}
+
+.percentage-32:after {
+  width: 32%;
+  left: 18%;
+}
+
+.percentage-33:after {
+  width: 33%;
+  left: 17%;
+}
+
+.percentage-34:after {
+  width: 34%;
+  left: 16%;
+}
+
+.percentage-35:after {
+  width: 35%;
+  left: 15%;
+}
+
+.percentage-36:after {
+  width: 36%;
+  left: 14%;
+}
+
+.percentage-37:after {
+  width: 37%;
+  left: 13%;
+}
+
+.percentage-38:after {
+  width: 38%;
+  left: 12%;
+}
+
+.percentage-39:after {
+  width: 39%;
+  left: 11%;
+}
+
+.percentage-40:after {
+  width: 40%;
+  left: 10%;
+}
+
+.percentage-41:after {
+  width: 41%;
+  left: 9%;
+}
+
+.percentage-42:after {
+  width: 42%;
+  left: 8%;
+}
+
+.percentage-43:after {
+  width: 43%;
+  left: 7%;
+}
+
+.percentage-44:after {
+  width: 44%;
+  left: 6%;
+}
+
+.percentage-45:after {
+  width: 45%;
+  left: 5%;
+}
+
+.percentage-46:after {
+  width: 46%;
+  left: 4%;
+}
+
+.percentage-47:after {
+  width: 47%;
+  left: 3%;
+}
+
+.percentage-48:after {
+  width: 48%;
+  left: 2%;
+}
+
+.percentage-49:after {
+  width: 49%;
+  left: 1%;
+}
+
+.percentage-50:after {
+  width: 50%;
+  left: 0%;
+}
+
+.percentage-51:after {
+  width: 51%;
+  left: -1%;
+}
+
+.percentage-52:after {
+  width: 52%;
+  left: -2%;
+}
+
+.percentage-53:after {
+  width: 53%;
+  left: -3%;
+}
+
+.percentage-54:after {
+  width: 54%;
+  left: -4%;
+}
+
+.percentage-55:after {
+  width: 55%;
+  left: -5%;
+}
+
+.percentage-56:after {
+  width: 56%;
+  left: -6%;
+}
+
+.percentage-57:after {
+  width: 57%;
+  left: -7%;
+}
+
+.percentage-58:after {
+  width: 58%;
+  left: -8%;
+}
+
+.percentage-59:after {
+  width: 59%;
+  left: -9%;
+}
+
+.percentage-60:after {
+  width: 60%;
+  left: -10%;
+}
+
+.percentage-61:after {
+  width: 61%;
+  left: -11%;
+}
+
+.percentage-62:after {
+  width: 62%;
+  left: -12%;
+}
+
+.percentage-63:after {
+  width: 63%;
+  left: -13%;
+}
+
+.percentage-64:after {
+  width: 64%;
+  left: -14%;
+}
+
+.percentage-65:after {
+  width: 65%;
+  left: -15%;
+}
+
+.percentage-66:after {
+  width: 66%;
+  left: -16%;
+}
+
+.percentage-67:after {
+  width: 67%;
+  left: -17%;
+}
+
+.percentage-68:after {
+  width: 68%;
+  left: -18%;
+}
+
+.percentage-69:after {
+  width: 69%;
+  left: -19%;
+}
+
+.percentage-70:after {
+  width: 70%;
+  left: -20%;
+}
+
+.percentage-71:after {
+  width: 71%;
+  left: -21%;
+}
+
+.percentage-72:after {
+  width: 72%;
+  left: -22%;
+}
+
+.percentage-73:after {
+  width: 73%;
+  left: -23%;
+}
+
+.percentage-74:after {
+  width: 74%;
+  left: -24%;
+}
+
+.percentage-75:after {
+  width: 75%;
+  left: -25%;
+}
+
+.percentage-76:after {
+  width: 76%;
+  left: -26%;
+}
+
+.percentage-77:after {
+  width: 77%;
+  left: -27%;
+}
+
+.percentage-78:after {
+  width: 78%;
+  left: -28%;
+}
+
+.percentage-79:after {
+  width: 79%;
+  left: -29%;
+}
+
+.percentage-80:after {
+  width: 80%;
+  left: -30%;
+}
+
+.percentage-81:after {
+  width: 81%;
+  left: -31%;
+}
+
+.percentage-82:after {
+  width: 82%;
+  left: -32%;
+}
+
+.percentage-83:after {
+  width: 83%;
+  left: -33%;
+}
+
+.percentage-84:after {
+  width: 84%;
+  left: -34%;
+}
+
+.percentage-85:after {
+  width: 85%;
+  left: -35%;
+}
+
+.percentage-86:after {
+  width: 86%;
+  left: -36%;
+}
+
+.percentage-87:after {
+  width: 87%;
+  left: -37%;
+}
+
+.percentage-88:after {
+  width: 88%;
+  left: -38%;
+}
+
+.percentage-89:after {
+  width: 89%;
+  left: -39%;
+}
+
+.percentage-90:after {
+  width: 90%;
+  left: -40%;
+}
+
+.percentage-91:after {
+  width: 91%;
+  left: -41%;
+}
+
+.percentage-92:after {
+  width: 92%;
+  left: -42%;
+}
+
+.percentage-93:after {
+  width: 93%;
+  left: -43%;
+}
+
+.percentage-94:after {
+  width: 94%;
+  left: -44%;
+}
+
+.percentage-95:after {
+  width: 95%;
+  left: -45%;
+}
+
+.percentage-96:after {
+  width: 96%;
+  left: -46%;
+}
+
+.percentage-97:after {
+  width: 97%;
+  left: -47%;
+}
+
+.percentage-98:after {
+  width: 98%;
+  left: -48%;
+}
+
+.percentage-99:after {
+  width: 99%;
+  left: -49%;
+}
+
+.percentage-100:after {
   width: 100%;
-  height: 1.5rem;
-  background-color: #f30000;
-  -webkit-animation: animate1 2s forwards 1s ease-in-out;
-          animation: animate1 2s forwards 1s ease-in-out;
-}
-@-webkit-keyframes animate1 {
-  to {
-    width: 13.5rem;
-  }
-}
-@keyframes animate1 {
-  to {
-    width: 13.5rem;
-  }
+  left: -50%;
 }/*# sourceMappingURL=graph.css.map */
