--- a/src/pages/Comparison/comparison.css
+++ b/src/pages/Comparison/comparison.css
@@ -12,7 +12,6 @@
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
-  background: #c7c7c7;
   border-radius: 2rem;
   width: 98%;
   height: 60vh;
@@ -23,6 +22,10 @@
   width: 100%;
   height: 12rem;
   flex-direction: row;
+}
+.compare__container .graph {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 @media (max-width: 767px) {
