--- a/src/pages/Comparison/comparison.scss
+++ b/src/pages/Comparison/comparison.scss
@@ -11,7 +11,6 @@
     align-items: center;
     justify-content: space-around;
     flex-direction: column;
-    background: rgb(199, 199, 199);
     border-radius: 2rem;
     width: 98%;
     height: 60vh;
@@ -22,6 +21,10 @@
     width: 100%;
     height: 12rem;
     flex-direction: row;
+  }
+  .graph {
+    display: grid;
+    grid-template-columns: 1fr;
   }
 }
 @media (max-width: 767px) {
