--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -20,6 +20,10 @@
   border-bottom: 2px solid transparent;
 }
 
+.login__error {
+  color: red;
+}
+
 .container {
   background: linear-gradient(90deg, #ffffff, #6dd5fa, #2980b9);
   display: flex;
