--- a/src/components/Graph/graph.scss
+++ b/src/components/Graph/graph.scss
@@ -1,55 +1,9 @@
-// .skillscontainer {
-//   display: grid;
-//   grid-template-columns: 1fr 1fr 1fr;
-
-//   width: 100%;
-//   padding: 1rem;
-
-//   .skillcontainer {
-//     width: 30rem;
-//     display: flex;
-//     justify-content: space-between;
-//     border-left: 1px solid black;
-//     border-right: 1px solid black;
-//     padding: 0.2rem;
-//     .line {
-//       display: flex;
-//       gap: 0.5rem;
-//       position: relative;
-//     }
-//     .percentage {
-//       font-size: 0.8em;
-//       width: 13rem;
-//       height: 1.5rem;
-//       background: repeating-linear-gradient(
-//         to right,
-//         rgb(0, 0, 0),
-//         rgb(0, 0, 0) 1px,
-//         #fff 1px
-//       );
-//     }
-//     .bar {
-//       position: absolute;
-//       right: 1.5rem;
-//       width: 100%;
-//       height: 1.5rem;
-//       background-color: rgb(243, 0, 0);
-//       animation: animate1 2s forwards 1s ease-in-out;
-//     }
-//     @keyframes animate1 {
-//       to {
-//         width: 13.5rem;
-//       }
-//     }
-//   }
-// }
 .text {
   font-weight: 600;
   display: flex;
   align-items: center;
   height: 40px;
   width: 130px;
-  background-color: white;
   position: absolute;
   left: 0;
   justify-content: flex-end;
@@ -62,12 +16,11 @@
   width: 85%;
   height: 40px;
   margin-left: 130px;
-  background: repeating-linear-gradient(to right, #ddd, #ddd 1px, #fff 1px);
-
+  border-top: 0.2px solid black;
   &:after {
     content: '';
     display: block;
-    background-color: #3d9970;
+    background-color: #34758f;
     width: 50px;
     margin-bottom: 10px;
     height: 90%;
