--- a/src/pages/Comparison/comparison.css
+++ b/src/pages/Comparison/comparison.css
@@ -7,6 +7,16 @@
   justify-content: center;
   gap: 1.5rem;
 }
+.compare__container:before {
+  content: "";
+  background: url(../../assets/compare_back.jpg) no-repeat center center/cover;
+  opacity: 0.5;
+  position: absolute;
+  width: 100%;
+  height: 92%;
+  bottom: 0;
+  z-index: -1;
+}
 .compare__container .cardandgraph {
   display: flex;
   align-items: center;
