--- a/src/pages/Comparison/comparison.scss
+++ b/src/pages/Comparison/comparison.scss
@@ -6,6 +6,16 @@
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
+  &:before {
+    content: '';
+    background: url(../../assets/compare_back.jpg) no-repeat center center/cover;
+    opacity: 0.5;
+    position: absolute;
+    width: 100%;
+    height: 92%;
+    bottom: 0;
+    z-index: -1;
+  }
   .cardandgraph {
     display: flex;
     align-items: center;
