--- a/src/pages/Search/search.css
+++ b/src/pages/Search/search.css
@@ -6,4 +6,14 @@
   align-items: center;
   flex-direction: column;
   padding: 2rem;
+  position: relative;
+}
+.search__container:before {
+  content: "";
+  background: url(../../assets/searchbackimg.png) no-repeat center center/cover;
+  opacity: 0.25;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }/*# sourceMappingURL=search.css.map */
