--- a/src/pages/Search/search.scss
+++ b/src/pages/Search/search.scss
@@ -6,4 +6,15 @@
   align-items: center;
   flex-direction: column;
   padding: 2rem;
+  position: relative;
+  &:before {
+    content: '';
+    background: url(../../assets/searchbackimg.png) no-repeat center
+      center/cover;
+    opacity: 0.25;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
 }
