--- a/src/components/ComparisonCard/comparisoncard.css
+++ b/src/components/ComparisonCard/comparisoncard.css
@@ -1,5 +1,5 @@
 .ComparisonCardContainer {
-  min-width: 40rem;
+  width: 30rem;
   gap: 7rem;
   height: 10rem;
   display: flex;
@@ -15,6 +15,7 @@
 .ComparisonCardContainer .nameAndImg {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .ComparisonCardContainer .valueAndSalary {
   border-radius: 0.3rem;
