--- a/src/components/ComparisonCard/comparisoncard.scss
+++ b/src/components/ComparisonCard/comparisoncard.scss
@@ -1,5 +1,5 @@
 .ComparisonCardContainer {
-  min-width: 40rem;
+  width: 30rem;
   gap: 7rem;
   height: 10rem;
   display: flex;
@@ -14,6 +14,7 @@
   .nameAndImg {
     display: flex;
     align-items: center;
+    justify-content: center;
   }
   .valueAndSalary {
     border-radius: 0.3rem;
