--- a/src/pages/Comparison/comparison.css
+++ b/src/pages/Comparison/comparison.css
@@ -27,6 +27,7 @@
   height: 60vh;
 }
 .compare__container .cards__container {
+  margin: 1.5rem;
   display: flex;
   justify-content: space-around;
   width: 100%;
