--- a/src/pages/Comparison/comparison.scss
+++ b/src/pages/Comparison/comparison.scss
@@ -26,6 +26,7 @@
     height: 60vh;
   }
   .cards__container {
+    margin: 1.5rem;
     display: flex;
     justify-content: space-around;
     width: 100%;
