--- a/src/components/ComparisonCard/comparisoncard.scss
+++ b/src/components/ComparisonCard/comparisoncard.scss
@@ -22,13 +22,16 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 867px) {
   .ComparisonCardContainer {
-    width: 25rem;
-    gap: 2rem;
-    height: 10rem;
-
-    justify-content: space-between;
+    width: 12rem;
+    font-size: 0.5rem;
+    height: 4.5rem;
+    gap: 0.1rem;
     padding: 0 0.5rem;
+    img {
+      width: 4rem;
+      height: 4rem;
+    }
   }
 }
