--- a/src/components/Graph/graph.scss
+++ b/src/components/Graph/graph.scss
@@ -5,7 +5,7 @@
   height: 40px;
   width: 130px;
   position: absolute;
-  left: 0;
+  left: 0rem;
   justify-content: flex-end;
 }
 
@@ -15,16 +15,16 @@
   text-transform: uppercase;
   width: 85%;
   height: 40px;
-  margin-left: 130px;
+  // margin-left: 130px;
   border-top: 0.2px solid black;
 
   &:after {
     content: '';
     display: block;
     background-color: #34758f;
-    width: 50px;
+    width: 3px;
     margin-bottom: 10px;
-    height: 90%;
+    height: 100%;
     position: relative;
     top: 50%;
     left: 50%;
@@ -46,6 +46,47 @@
       $value: ($i * 1%);
       width: $value;
       left: 50% - $value;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .text {
+    font-size: 0.7rem;
+    font-weight: 600;
+    height: 20px;
+    text-align: left;
+    justify-content: flex-start;
+  }
+
+  .percentage {
+    font-size: 0.8em;
+    line-height: 0.5;
+    text-transform: uppercase;
+    width: 85%;
+    height: 20px;
+    // margin-left: 10px;
+    border-top: 0.2px solid black;
+
+    &:after {
+      content: '';
+      display: block;
+      background-color: #34758f;
+      width: 3px;
+      margin-bottom: 10px;
+      height: 90%;
+      position: relative;
+      top: 20%;
+      left: 50%;
+      transform: translateY(-50%);
+      transition: background-color 0.3s ease;
+      cursor: pointer;
+    }
+    &:hover,
+    &:focus {
+      &:after {
+        background-color: #aaa;
+      }
     }
   }
 }
