--- a/src/pages/Comparison/comparison.scss
+++ b/src/pages/Comparison/comparison.scss
@@ -36,13 +36,34 @@
   .graph {
     display: grid;
     grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 867px) {
   .compare__container {
-    margin-top: 2rem;
+    margin-top: 7rem;
     gap: 2rem;
     flex-direction: column;
     height: 100%;
+
+    .cardandgraph {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      flex-direction: column;
+      border-radius: 6rem;
+      width: 98%;
+      height: 67vh;
+    }
+    .cards__container {
+      margin: 0.5rem;
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+      height: 10rem;
+      flex-direction: row;
+      gap: 0.5rem;
+    }
   }
 }
