--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,13 +1,22 @@
 .homepageContainer {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.homepageContainer .main {
+  width: 100%;
   height: 92vh;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  flex-direction: column;
   position: relative;
 }
-.homepageContainer:before {
+.homepageContainer .main:before {
   content: "";
   background: url(../../assets/sfondowy2-1500x1007.jpg) no-repeat center center/cover;
   opacity: 0.25;
@@ -16,6 +25,6 @@
   height: 100%;
   z-index: -1;
 }
-.homepageContainer div {
+.homepageContainer .main div {
   width: 25%;
 }/*# sourceMappingURL=home.css.map */
