--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,22 +1,32 @@
 .homepageContainer {
   width: 100%;
-  height: 92vh;
+
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  position: relative;
-  &:before {
-    content: '';
-    background: url(../../assets/sfondowy2-1500x1007.jpg) no-repeat center
-      center/cover;
-    opacity: 0.25;
-    position: absolute;
+  .main {
     width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-  div {
-    width: 25%;
+    height: 92vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    position: relative;
+    &:before {
+      content: '';
+      background: url(../../assets/sfondowy2-1500x1007.jpg) no-repeat center
+        center/cover;
+      opacity: 0.25;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+    div {
+      width: 25%;
+    }
   }
 }
